changes in email texts

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -182,3 +182,5 @@ hr.school-heading-hr{margin-top: 21px;}
 
 .signinpanel .form-control{margin-top: 0 !important;}
 .reset-text{text-align: center;}
+
+.dropdown-quick-edit-stud{background: lightgrey; padding: 7px;cursor: pointer;}
