--- a/app/views/user_mailer/forgot_password_email.html.erb
+++ b/app/views/user_mailer/forgot_password_email.html.erb
@@ -19,26 +19,35 @@
         </tr>
         <tr class="episode">
           <td valign="top" colspan="2" style="padding:20px">
-            <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Forgot password for Books That Grow.</h2>
+            <!-- <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Forgot password for Books That Grow.</h2> -->
             <p style="margin:15px 0; font-size:13px">
               Hello <%= @user_info[:name] %>,
             </p>
-            <p style="margin:15px 0; font-size:13px">
+            <!-- <p style="margin:15px 0; font-size:13px">
               <p style="margin:0 0; font-size:13px">
-                Username: <%= @user_info[:username] %>
+                Username: <%#= @user_info[:username] %>
               </p>
               <p style="margin:0 0; font-size:13px">
-                Email Address: <%= @user_info[:email] %>
+                Email Address: <%#= @user_info[:email] %>
               </p>
-            </p>
-            <p style="margin:0 0; font-size:13px">
-			         To reset password click on following
-			         link: <a href = '<%= @user_info[:link] %>'>reset password</a>
-            </p>
-			      <p style="margin:0 0; font-size:13px">
-			       To login to the site, just follow this link: <a href = '<%= @user_info[:url] %>'>login</a>
-			      </p>	
-            <p style="margin:15px 0 0; font-size:13px">
+            </p> -->
+            <%if @user_info[:app_type].eql?('angular') %>
+              <p style="margin:15px 0; font-size:13px">
+			          A request has been made to reset the Books That Grow password for <%= @user_info[:username] %>. To reset this password, click on the following link: <a href = '<%= @user_info[:link] %>'>reset password</a>
+              </p>
+              <p style="margin:15px 0; font-size:13px">
+                If you believe this request was made in error or if you do not wish to reset this password, you can simply ignore this email.
+              </p>
+            <%else%>
+              <p style="margin:15px 0; font-size:13px">
+                A request has been made to reset your Books That Grow password. To reset your password, click on the following link: <a href = '<%= @user_info[:link] %>'>reset password</a>
+              </p>
+              <p style="margin:15px 0; font-size:13px">
+                If you did not make this request and you do not wish to reset your password, you can simply ignore this email.
+                <!-- <a href = '<%#= @user_info[:url] %>'>login</a> -->
+              </p>
+            <%end%>
+			      <p style="margin:15px 0 0; font-size:13px">
               Thanks,
             </p>
             <p style="margin:15px 0; font-size:13px">
