--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -18,7 +18,7 @@
         </tr>
         <tr class="episode">
           <td valign="top" colspan="2" style="padding:20px">
-            <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Welcome to Books That Grow!</h2>
+            <!-- <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Welcome to Books That Grow!</h2> -->
             <p style="margin:15px 0; font-size:13px">
               Hello <%= @user_info[:firstname] %>,
             </p>
@@ -32,7 +32,7 @@
               <p style="margin:0 0; font-size:13px">
                 Username: <%= @user_info[:username]  %>
               </p>
-              <p style="margin:0 0; font-size:13px">
+              <p style="margin:15px 0; font-size:13px">
                 Email Address: <%= @user_info[:email] %>
               </p>
             </p>
