changes in email texts

--- a/app/views/user_mailer/user_details_changed.html.erb
+++ b/app/views/user_mailer/user_details_changed.html.erb
@@ -24,8 +24,11 @@
               <p style="margin:15px 0; font-size:13px">
                 Hello <%= @user_info[:name] %>, 
               </p>
-              <p style="margin:0 0; font-size:13px">
+              <p style="margin:15px 0; font-size:13px">
                 An administrator has updated your Books That Grow account. 
+              </p>
+              <p style="margin:15px 0; font-size:13px">
+                You can log in to Books That Grow using the following information.
               </p>
               <p style="margin:15px 0; font-size:13px">
                 <p style="margin:0 0; font-size:13px">
