--- a/app/views/user_mailer/user_email_changed.html.erb
+++ b/app/views/user_mailer/user_email_changed.html.erb
@@ -18,7 +18,7 @@
         </tr>
         <tr class="episode">
           <td valign="top" colspan="2" style="padding:20px">
-            <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Your Books That Grow account email has been updated.</h2>
+            <!-- <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Your Books That Grow account email has been updated.</h2> -->
             <p style="margin:15px 0; font-size:13px">
               Dear <%= @user_info[:name] %>, 
             </p>
