--- a/app/views/user_mailer/password_reset_email.html.erb
+++ b/app/views/user_mailer/password_reset_email.html.erb
@@ -18,7 +18,7 @@
         </tr>
         <tr class="episode">
           <td valign="top" colspan="2" style="padding:20px">
-            <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Your Books That Grow password has been reset.</h2>
+           <!--  <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Your Books That Grow password has been reset.</h2> -->
             <p style="margin:15px 0; font-size:13px">
               Hello <%= @user_info[:name] %>,
             </p>
