changes in email texts

--- a/app/views/user_mailer/user_email_changed.html.erb
+++ b/app/views/user_mailer/user_email_changed.html.erb
@@ -20,7 +20,7 @@
           <td valign="top" colspan="2" style="padding:20px">
             <!-- <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Your Books That Grow account email has been updated.</h2> -->
             <p style="margin:15px 0; font-size:13px">
-              Dear <%= @user_info[:name] %>, 
+              Hello <%= @user_info[:name] %>, 
             </p>
             <p style="margin:0 0; font-size:13px">
               An administrator has updated your Books That Grow account. 
@@ -31,7 +31,7 @@
             <p style="margin:0 0; font-size:13px">
               To reset your password, click on the following link: <a href = '<%= @user_info[:reset_pass_url] %>'>reset password</a>
             </p>
-            <p style="margin:0 0; font-size:13px">
+            <p style="margin:15px 0; font-size:13px">
               If you believe this update was made in error, please immediately contact your school administrator.
             </p>
             <p style="margin:15px 0 0; font-size:13px">
