--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -33,7 +33,7 @@
                 Username: <%= @user_info[:username]  %>
               </p>
               <p style="margin:15px 0; font-size:13px">
-                Email Address: <%= @user_info[:email] %>
+                Email: <%= @user_info[:email] %>
               </p>
             </p>
             <p style="margin:0 0; font-size:13px">
