change on reset text

--- a/app/views/users/reset.html.erb
+++ b/app/views/users/reset.html.erb
@@ -2,7 +2,7 @@
     <h1> Books That Grow</h1>
 	<%= image_tag("app_icon.png", :class=>"logo_image")%>
 	<h3>You password has been reset.</h3>
-	<% unless params[:app_type].blank? %>
+	<% if params[:app_type].blank? %>
 		<h4>Click <a href = '<%= params[:path] %>'>here</a> to log in to the administrative portal.</h4>
 	<%else%>
 		<h4>Click <a href = '<%= params[:path] %>'>here</a> to log in to Books That Grow.</h4>
