resolved issues resolved to classroom/user multiselect

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -102,7 +102,7 @@ label.error {display:block;}
 .no-access{width:100%; min-height:850px; background:#fff;}
 .no-access img {padding-top:100px;}	
 
-.date-picker-margin {margin: 0;}
+.date-picker-margin {margin: 0; cursor: pointer !important;}
 .input-group .hasDatepicker + label.error{position:absolute;top:42px;}
 
 .image-file-name {text-overflow:ellipsis; white-space:nowrap; overflow:hidden; width:300px;}	
@@ -185,4 +185,14 @@ hr.school-heading-hr{margin-top: 21px;}
 
 .dropdown-quick-edit-stud{background: #eee; padding: 7px; cursor: pointer; border: solid 1px #ccc; border-radius: 4px; position:relative;}
 .datepicker-align{position: absolute; top: -1px; right: 1px; height: 37px; width: 36px !important; border-left: solid 1px #ccc !important; padding-top: 10px !important; padding-left: 12px !important;}
-.input-group-addon:hover{cursor: pointer;	}
+.input-group-addon:hover{cursor: pointer;}
+
+.multi-select-heading{display: block;font-size: 15px;padding-bottom: 10px;}
+.multiselect-btns{margin: 15px 50px -10px 50px !important;;height: 25px;}
+
+.btn:active{opacity: 0.6; }
+.btn.btn-success:hover{background: #079480 !important}
+.btn.btn-primary:hover{background: #2475BB !important}
+
+.lbjs-list .list_item_img:hover{color: #000}
+.lbjs-list .list_item_img:active{opacity: 0.6}
