--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -40,7 +40,7 @@
 			    	<%#= @classroom.school_year_end_date.year unless @classroom.school_year_end_date.blank?  %>
             	</address> -->
             	<div data-no-turbolink>
-			    	<%= link_to 'Edit', edit_classroom_path(@classroom, :school_id=>@classroom.school_id), :class=>"btn btn-success btn-xs", data: { disable_with: 'Saving...' } %>
+			    	<%= link_to 'Edit', edit_classroom_path(@classroom, :school_id=>@classroom.school_id), :class=>"btn btn-success btn-xs" %>
 					<%= link_to 'Return to Class List', classrooms_path(:school_id=>@classroom.school_id), class: "btn btn-white btn-xs"%>
         	    </div>
 		    </div>
